# clinicSiriusCpp

./: .gitignore  README.md  run.sh
ClinicSirius/: CMakeLists.txt
ClinicSirius/include/admins/: adminprofilewidget.h  adminwidget.h  patientappointmentsviewer.h  statisticswidget.h
ClinicSirius/include/common/: authwindow.h  contentpage.h  dashboardwidget.h  datamanager.h  detailmenu.h  infocard.h  loginwindow.h  mainpage.h  mainwindow.h  models.h  navigationwidget.h  registrationwindow.h  scrollabletab.h  statsbadge.h  styledbuttongroup.h
ClinicSirius/include/doctors/: addslotdialog.h  doctorprofilewidget.h  doctorvisitdialog.h  doctorwidget.h  patienthistorywidget.h
ClinicSirius/include/managers/: bulkoperationsdialog.h  managerprofilewidget.h  managerscheduleviewer.h  managerwidget.h  patientmanagementdialog.h  roomscheduleviewer.h
ClinicSirius/include/patients/: addbycodedialog.h  appointmentbookingwidget.h  appointmentcalendar.h  createpatientdialog.h  familyviewerwidget.h  patientselectiondialog.h  profilewidget.h
ClinicSirius/resources/: resources.qrc  styles.qss
ClinicSirius/src/admins/: adminprofilewidget.cpp  adminwidget.cpp  patientappointmentsviewer.cpp  statisticswidget.cpp
ClinicSirius/src/common/: authwindow.cpp  contentpage.cpp  dashboardwidget.cpp  datamanager.cpp  detailmenu.cpp  infocard.cpp  loginwindow.cpp  main.cpp  mainpage.cpp  mainwindow.cpp  navigationwidget.cpp  registrationwindow.cpp  scrollabletab.cpp  statsbadge.cpp  styledbuttongroup.cpp
ClinicSirius/src/doctors/: addslotdialog.cpp  doctorprofilewidget.cpp  doctorvisitdialog.cpp  doctorwidget.cpp  patienthistorywidget.cpp
ClinicSirius/src/managers/: bulkoperationsdialog.cpp  managerprofilewidget.cpp  managerscheduleviewer.cpp  managerwidget.cpp  patientmanagementdialog.cpp  roomscheduleviewer.cpp
ClinicSirius/src/patients/: addbycodedialog.cpp  appointmentbookingwidget.cpp  appointmentcalendar.cpp  createpatientdialog.cpp  familyviewerwidget.cpp  patientselectiondialog.cpp  profilewidget.cpp
data/: appointment.json  appointment_schedule.json  invitation_code.json  patient_group.json  recipe.json
